trunk/Archive2/33/0aea1f77fb7524/output
+ clang++ -std=c++11 -O3 -Wall -pedantic -pthread main.cpp
main.cpp:48:42: error: default initialization of an object of const type 'const hash<std::string>' requires a user-provided default constructor
   const hash<std::string> hash<Option>::strHash;
                                         ^
main.cpp:49:35: error: default initialization of an object of const type 'const hash<char>' requires a user-provided default constructor
   const hash<char> hash<Option>::charHash;
                                  ^
main.cpp:52:1: error: C++ requires a type specifier for all declarations
main(int, char **)
^~~~
3 errors generated.
